fixed scrollbar styling

--- a/public/css/built.tmp.css
+++ b/public/css/built.tmp.css
@@ -15259,7 +15259,7 @@ div.dataTables_length select {
     margin-top: 6px;
 
     border-radius: 5px;
-    background-color: #f3f3f3;
+    background-color: transparent;
 }
 
 .sidebar-nav::-webkit-scrollbar
@@ -15272,6 +15272,17 @@ div.dataTables_length select {
 .sidebar-nav::-webkit-scrollbar-thumb
 {
     border-radius: 5px;
+    background-color: transparent;
+}
+
+
+.sidebar-nav:hover::-webkit-scrollbar-track
+{
+    background-color: #f3f3f3;
+}
+
+.sidebar-nav:hover::-webkit-scrollbar-thumb
+{
     background-color: #01a8fe;
 }
 
