--- a/resources/assets/css/sidebar.css
+++ b/resources/assets/css/sidebar.css
@@ -467,7 +467,7 @@
     margin-top: 6px;
 
     border-radius: 5px;
-    background-color: #f3f3f3;
+    background-color: transparent;
 }
 
 .sidebar-nav::-webkit-scrollbar
@@ -480,5 +480,16 @@
 .sidebar-nav::-webkit-scrollbar-thumb
 {
     border-radius: 5px;
+    background-color: transparent;
+}
+
+
+.sidebar-nav:hover::-webkit-scrollbar-track
+{
+    background-color: #f3f3f3;
+}
+
+.sidebar-nav:hover::-webkit-scrollbar-thumb
+{
     background-color: #01a8fe;
 }
